# internal/nocalhost-api/model/cluster_user.go
@@ -41,7 +41,7 @@ type ClusterUserV2 struct {
 	SleepAt            *time.Time   `gorm:"column:sleep_at;type:timestamp" json:"sleep_at"`
 	IsAsleep           bool         `gorm:"column:is_asleep;not null;default:false" json:"is_asleep"`
 	SleepConfig        *SleepConfig `gorm:"column:sleep_config;type:VARCHAR(1024);" json:"sleep_config"`
-	SleepSaving        *float32     `gorm:"column:sleep_saving;type:decimal(11,3);default:0;not null;" json:"sleep_saving"`
+	SleepSaving        float32      `gorm:"column:sleep_saving;type:decimal(11,3);default:0;not null;" json:"sleep_saving"`
 
 	// ext field
 	*ClusterUserExt
@@ -93,7 +93,7 @@ type ClusterUserModel struct {
 	SleepAt            *time.Time   `gorm:"column:sleep_at;type:timestamp" json:"sleep_at"`
 	IsAsleep           bool         `gorm:"column:is_asleep;not null;default:false" json:"is_asleep"`
 	SleepConfig        *SleepConfig `gorm:"column:sleep_config;type:VARCHAR(1024);" json:"sleep_config"`
-	SleepSaving        *float32     `gorm:"column:sleep_saving;type:decimal(11,3);default:0;not null;" json:"sleep_saving"`
+	SleepSaving        float32      `gorm:"column:sleep_saving;type:decimal(11,3);default:0;not null;" json:"sleep_saving"`
 }
 
 func (cu *ClusterUserModel) IsClusterAdmin() bool {
